Completed User, updated swagger, removed deprecated validator
